# text_finder

./: CMakeLists.txt  find_function.cpp  find_function.h  indexer.cpp  indexer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
